--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: rgb(22, 224, 231);
 }
 
 .container {
